# GigglyCode

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  gramer  gramer.py
dump/: hello.gc
src/: AST.cpp  CMakeLists.txt  errors.cpp  lexer.cpp  lexer.py  main.c  main.cpp  main.py  parser.cpp  tokens.cpp  tokens.py
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
src/compiler/enviornment/: enviornment.cpp  enviornment.hpp
src/errors/: errors.cpp  errors.hpp
src/include/: AST.hpp  CMakeLists.txt  errors.hpp  lexer.hpp  parser.hpp  tokens.hpp
src/lexer/: CMakeLists.txt  helper.cpp  lexer.cpp  lexer.hpp  string.cpp  tokens.cpp  tokens.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/parser/AST/: CMakeLists.txt  ast.cpp  ast.hpp
test/: arthmatic.gc  arthmatic.lang  testscipt.gc
